<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Helicopter</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="don_t_have_accont_sign_up">Don\'t have account? Sign up!</string>
    <string name="login">Login</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="signup">SignUp</string>
    <string name="signup_ok">Signup ok</string>
    <string name="signup_error">Signup error</string>
    <string name="senhas_diferentes">Senhas diferentes</string>
    <string name="insira_todos_os_campos">Insira todos os campos</string>
    <string name="cadastro_ok">Cadastro ok</string>
    <string name="cadastro_invalido">cadastro invalido</string>
    <string name="erro_de_login">erro de login</string>
    <string name="logout">logout</string>
</resources>